[workspace]
members = [
	"crates/chainio",
	"crates/contracts/eigenlayer-middleware-bindings",
	"crates/crypto/bls",
	"crates/crypto/bn254",
	"crates/crypto/ecdsa",
	"crates/node-api",
	"crates/node-metrics",
	"crates/services/avs-registry",
	"crates/services/bls-aggregator",
	"crates/services/operator-pubkeys",
	"crates/signer",
	"crates/tracing"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rustdoc.all = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"

[workspace.dependencies]
# crypto
ecdsa = { version = "0.16", default-features = false }
bn254 = { version = "0.0.1", default-features = false }
bls12_381 = { version = "0.8.0" }

# eth
alloy-primitives = { version = "0.6", default-features = false }
alloy-json-abi = { version = "0.6", default-features = false }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["keystore"] }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy" }

# serde
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }

# misc.
axum = { version = "0.7", default-features = false }
metrics = { version = "0.22", default-features = false }
metrics-exporter-prometheus = { version = "0.13", default-features = false }
log = { version = "0.4", default-features = false }
tracing = { version = "0.1.0", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], default-features = false }
tokio = "1.33"
thiserror = "1"
bitvec = "1"
