[package]
name = "chainio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
log.workspace = true
ethers = "2"
eigenlayer-middleware-bindings = { path = "../contracts/eigenlayer-middleware-bindings"}