[package]
name = "contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-json-abi.workspace = true
alloy-primitives.workspace = true

[build-dependencies]
ethers-solc.workspace = true
serde_json.workspace = true
serde.workspace = true
