[package]
name = "signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-signer.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["k256"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
alloy-consensus.workspace = true